fix(borders): fix clipping borders

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,9 +6,9 @@ main h1 {
   @apply text-4xl;
 }
 
-html, body {
+html {
   font-family: 'Source Sans Pro', sans-serif;
-  @apply border-y-4 border-b-blue-300 border-t-blue-300 h-full bg-gray-600 text-slate-200;
+  @apply border-y-8 border-b-blue-300 border-t-blue-300 min-h-full bg-gray-600 text-slate-200;
 }
 
 a {
